--- a/TestProjects/ionic/photo-gallery/package.json
+++ b/TestProjects/ionic/photo-gallery/package.json
@@ -1,13 +1,7 @@
 {
-  "name": "my-app",
-  "version": "0.1.1",
+  "name": "photo-gallery",
+  "version": "0.0.1",
   "private": true,
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
   "dependencies": {
     "@capacitor/core": "2.0.2",
     "@ionic/react": "^5.0.7",
@@ -23,13 +17,17 @@
     "@types/react-router-dom": "^5.1.3",
     "ionicons": "^5.0.0",
     "react": "^16.13.0",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
     "typescript": "3.8.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -47,8 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "2.0.2",
-    "parcel-bundler": "^1.12.4"
+    "@capacitor/cli": "2.0.2"
   },
-  "description": ""
+  "description": "An Ionic project"
 }
