--- a/TestProjects/ChromelyTest1/ChromelyReact/list/package.json
+++ b/TestProjects/ChromelyTest1/ChromelyReact/list/package.json
@@ -1,18 +1,10 @@
 {
-  "name": "my-chromely",
-  "version": "0.1.1",
+  "name": "list",
+  "version": "0.0.1",
   "private": true,
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build /d /s /c",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
   "dependencies": {
     "@capacitor/core": "2.0.2",
-    "@ionic/pwa-elements": "^1.5.2",
     "@ionic/react": "^5.0.7",
-    "@ionic/react-hooks": "0.0.6",
     "@ionic/react-router": "^5.0.7",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -25,13 +17,17 @@
     "@types/react-router-dom": "^5.1.3",
     "ionicons": "^5.0.0",
     "react": "^16.13.0",
-    "react-dom": "^16.12.0",
-    "react-redux": "^7.2.0",
+    "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "redux": "^4.0.5",
     "typescript": "3.8.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -49,8 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "2.0.2",
-    "parcel-bundler": "^1.12.4"
+    "@capacitor/cli": "2.0.2"
   },
-  "description": ""
+  "description": "An Ionic project"
 }
