--- a/TestProjects/ChromelyTest1/ChromelyReact/reactapp/capacitor.config.json
+++ b/TestProjects/ChromelyTest1/ChromelyReact/reactapp/capacitor.config.json
@@ -3,6 +3,6 @@
   "appName": "my-chromely",
   "bundledWebRuntime": false,
   "npmClient": "npm",
-  "webDir": "build",
+  "webDir": "dist",
   "cordova": {}
 }
