--- a/TestProjects/ChromelyTest1/ChromelyReact/reactapp/package.json
+++ b/TestProjects/ChromelyTest1/ChromelyReact/reactapp/package.json
@@ -19,10 +19,11 @@
     "@testing-library/user-event": "^8.0.3",
     "@types/jest": "^24.0.25",
     "@types/node": "^12.12.24",
-    "@types/react": "^16.9.17",
+    "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
+    "eslint-plugin-flowtype": "^4.7.0",
     "ionicons": "^5.0.0",
     "react": "^16.13.0",
     "react-dom": "^16.12.0",
