--- a/TestProjects/ChromelyTest1/ChromelyReact/reactapp/package.json
+++ b/TestProjects/ChromelyTest1/ChromelyReact/reactapp/package.json
@@ -3,17 +3,12 @@
   "version": "0.1.1",
   "private": true,
   "scripts": {
-    "start": "ionic serve",
+    "start": "parcel",
     "build": "ionic build --engine=browser",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@capacitor/core": "2.0.2",
-    "@ionic/pwa-elements": "^1.5.2",
-    "@ionic/react": "^5.0.7",
-    "@ionic/react-hooks": "0.0.6",
-    "@ionic/react-router": "^5.0.7",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^8.0.3",
@@ -23,8 +18,6 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
-    "eslint-plugin-flowtype": "^4.7.0",
-    "ionicons": "^5.0.0",
     "react": "^16.13.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
@@ -50,7 +43,7 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "2.0.2"
+    "parcel-bundler": "^1.12.4"
   },
   "description": ""
 }
