--- a/TestProjects/ChromelyTest1/ChromelyReact/reactapp/package.json
+++ b/TestProjects/ChromelyTest1/ChromelyReact/reactapp/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.9.13",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^8.0.3",
