--- a/TestProjects/ChromelyTest1/ChromelyReact/reactapp/package.json
+++ b/TestProjects/ChromelyTest1/ChromelyReact/reactapp/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.1",
   "private": true,
   "scripts": {
-    "start": "parcel",
-    "build": "ionic build --engine=browser",
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -14,10 +14,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^8.0.3",
-    "@types/jest": "^24.0.25",
-    "@types/node": "^12.12.24",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^12.12.38",
+    "@types/parcel-env": "0.0.0",
     "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.4",
+    "@types/react-dom": "^16.9.7",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
     "react": "^16.13.0",
@@ -28,7 +29,7 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "typeface-roboto": "0.0.75",
-    "typescript": "3.8.3"
+    "typescript": "^3.8.3"
   },
   "eslintConfig": {
     "extends": "react-app"
