--- a/TestProjects/ChromelyTest1/ChromelyReact/reactapp/tsconfig.json
+++ b/TestProjects/ChromelyTest1/ChromelyReact/reactapp/tsconfig.json
@@ -1,10 +1,14 @@
 {
   "compilerOptions": {
-    "target": "es2020",
+    "target": "es2016",
     "lib": [
       "dom",
       "dom.iterable",
-      "esnext"
+      "esnext",
+      "es5",
+      "es6",
+      "es2015",
+      "es2016"
     ],
     "allowJs": true,
     "skipLibCheck": true,
@@ -18,6 +22,10 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
+    "baseUrl": ".",
+    "paths": {
+      "~*": ["./src/*"]
+    }
   },
   "include": [
     "src"
