--- a/TestProjects/ChromelyTest1/ChromelyReact/reactapp/tsconfig.json
+++ b/TestProjects/ChromelyTest1/ChromelyReact/reactapp/tsconfig.json
@@ -22,6 +22,11 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
+
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "strictNullChecks": true,
+
     "baseUrl": ".",
     "paths": {
       "~*": ["./src/*"]
