--- a/TestProjects/ChromelyTest1/ChromelyReact/reactapp/tsconfig.json
+++ b/TestProjects/ChromelyTest1/ChromelyReact/reactapp/tsconfig.json
@@ -22,15 +22,10 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
-
     "noImplicitAny": true,
     "noImplicitThis": true,
     "strictNullChecks": true,
-
-    "baseUrl": ".",
-    "paths": {
-      "~*": ["./src/*"]
-    }
+    "baseUrl": "."
   },
   "include": [
     "src"
