--- a/TestProjects/ChromelyTest1/ChromelyReact/ChromelyReact.csproj
+++ b/TestProjects/ChromelyTest1/ChromelyReact/ChromelyReact.csproj
@@ -22,6 +22,10 @@
 
   <ItemGroup>
     <PackageReference Include="Chromely" Version="5.0.77.3" />
+    <PackageReference Include="Flurl.Http" Version="2.4.2" />
+    <PackageReference Include="Polly" Version="7.2.1" />
+    <PackageReference Include="SpotifyAPI.Web" Version="5.1.1" />
+    <PackageReference Include="SpotifyAPI.Web.Auth" Version="5.1.1" />
     <PackageReference Include="System.Buffers" Version="4.5.0" />
   </ItemGroup>
  
