#6uhqh2 installed modules again

--- a/TestProjects/ChromelyTest1/ChromelyReact/reactapp/tsconfig.json
+++ b/TestProjects/ChromelyTest1/ChromelyReact/reactapp/tsconfig.json
@@ -28,6 +28,11 @@
     "baseUrl": "."
   },
   "include": [
-    "src"
+    "src",
+    "src/*.test.ts*",
+    "src/*.stories.ts*",
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
