--- a/TestProjects/ChromelyTest1/ChromelyReact/reactapp/package.json
+++ b/TestProjects/ChromelyTest1/ChromelyReact/reactapp/package.json
@@ -46,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/preset-typescript": "^7.9.0",
     "@storybook/addon-actions": "^5.3.18",
     "@storybook/addon-docs": "^6.0.0-beta.4",
     "@storybook/addon-links": "^5.3.18",
@@ -59,7 +61,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^8.0.3",
-    "@types/jest": "^24.9.1",
+    "@types/jest": "^25.2.1",
     "@types/react-test-renderer": "^16.9.2",
     "jest": "^26.0.1",
     "parcel-bundler": "^1.12.4",
