--- a/TestProjects/ChromelyTest1/ChromelyReact/reactapp/package.json
+++ b/TestProjects/ChromelyTest1/ChromelyReact/reactapp/package.json
@@ -14,21 +14,16 @@
   "dependencies": {
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
-    "@types/node": "^12.12.38",
     "@types/parcel-env": "0.0.0",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.7",
-    "@types/react-router": "^5.1.4",
-    "@types/react-router-dom": "^5.1.3",
-    "react": "^16.13.0",
-    "react-dom": "^16.12.0",
+    "@types/react-router": "^5.1.7",
+    "@types/react-router-dom": "^5.1.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
-    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
-    "typeface-roboto": "0.0.75",
-    "typescript": "^3.8.3"
+    "typeface-roboto": "0.0.75"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -49,25 +44,28 @@
     "@babel/core": "^7.9.6",
     "@babel/preset-typescript": "^7.9.0",
     "@storybook/addon-actions": "^5.3.18",
-    "@storybook/addon-docs": "^6.0.0-beta.4",
-    "@storybook/addon-links": "^5.3.18",
+    "@storybook/addon-docs": "^5.3.18",
     "@storybook/addon-storyshots": "^5.3.18",
     "@storybook/addon-storysource": "^5.3.18",
     "@storybook/addon-viewport": "^5.3.18",
     "@storybook/addons": "^5.3.18",
-    "@storybook/preset-create-react-app": "^2.1.1",
-    "@storybook/preset-typescript": "^3.0.0",
     "@storybook/react": "^5.3.18",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^8.0.3",
+    "@testing-library/jest-dom": "^5.7.0",
+    "@testing-library/react": "^10.0.4",
+    "@testing-library/user-event": "^10.1.2",
     "@types/jest": "^25.2.1",
+    "@types/node": "^13.13.5",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.7",
     "@types/react-test-renderer": "^16.9.2",
+    "babel-loader": "^8.1.0",
     "jest": "^26.0.1",
     "parcel-bundler": "^1.12.4",
     "react-test-renderer": "^16.13.1",
-    "storybook": "^5.3.18",
-    "ts-jest": "^25.5.1"
+    "ts-jest": "^25.5.1",
+    "typescript": "^3.8.3",
+    "core-js": "^3.6.5"
   },
-  "description": ""
+  "description": "",
+  "optionalDependencies": {}
 }
