--- a/TestProjects/ChromelyTest1/ChromelyReact/reactapp/package.json
+++ b/TestProjects/ChromelyTest1/ChromelyReact/reactapp/package.json
@@ -45,10 +45,13 @@
     "@babel/preset-typescript": "^7.9.0",
     "@storybook/addon-actions": "^5.3.18",
     "@storybook/addon-docs": "^5.3.18",
+    "@storybook/addon-knobs": "^5.3.18",
+    "@storybook/addon-links": "^5.3.18",
     "@storybook/addon-storyshots": "^5.3.18",
     "@storybook/addon-storysource": "^5.3.18",
     "@storybook/addon-viewport": "^5.3.18",
     "@storybook/addons": "^5.3.18",
+    "@storybook/preset-create-react-app": "^2.1.1",
     "@storybook/react": "^5.3.18",
     "@testing-library/jest-dom": "^5.7.0",
     "@testing-library/react": "^10.0.4",
@@ -59,12 +62,12 @@
     "@types/react-dom": "^16.9.7",
     "@types/react-test-renderer": "^16.9.2",
     "babel-loader": "^8.1.0",
+    "core-js": "^3.6.5",
     "jest": "^26.0.1",
     "parcel-bundler": "^1.12.4",
     "react-test-renderer": "^16.13.1",
     "ts-jest": "^25.5.1",
-    "typescript": "^3.8.3",
-    "core-js": "^3.6.5"
+    "typescript": "^3.8.3"
   },
   "description": "",
   "optionalDependencies": {}
