--- a/TestProjects/ChromelyTest1/ChromelyReact/reactapp/package.json
+++ b/TestProjects/ChromelyTest1/ChromelyReact/reactapp/package.json
@@ -17,6 +17,7 @@
     "@types/parcel-env": "0.0.0",
     "@types/react-router": "^5.1.7",
     "@types/react-router-dom": "^5.1.5",
+    "add": "^2.0.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -62,8 +63,9 @@
     "@types/react-dom": "^16.9.7",
     "@types/react-test-renderer": "^16.9.2",
     "babel-loader": "^8.1.0",
+    "babel-plugin-require-context-hook": "^1.0.0",
     "core-js": "^3.6.5",
-    "jest": "^26.0.1",
+    "jest": "^25.5.4",
     "parcel-bundler": "^1.12.4",
     "react-test-renderer": "^16.13.1",
     "ts-jest": "^25.5.1",
