#6mg06j created a services test class.  implicit auth tested

--- a/TestProjects/ChromelyStart/TrakDiscovery.Services/TrakDiscovery.Services.csproj
+++ b/TestProjects/ChromelyStart/TrakDiscovery.Services/TrakDiscovery.Services.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Flurl.Http" Version="2.4.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Polly" Version="7.2.1" />
+    <PackageReference Include="SpotifyAPI.Web" Version="5.1.1" />
+    <PackageReference Include="SpotifyAPI.Web.Auth" Version="5.1.1" />
+  </ItemGroup>
+
 </Project>
