--- a/TestProjects/ChromelyStart/ChromelyReact/ChromelyApp.csproj
+++ b/TestProjects/ChromelyStart/ChromelyReact/ChromelyApp.csproj
@@ -25,6 +25,10 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Polly" Version="7.2.1" />
     <PackageReference Include="System.Buffers" Version="4.5.0" />
+    <PackageReference Include="xunit.runner.console" Version="2.4.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
  
   <ItemGroup>
