#6yb80c chromely and api calls now work

--- a/TestProjects/ChromelyStart/ChromelyReact/reactapp/tsconfig.json
+++ b/TestProjects/ChromelyStart/ChromelyReact/reactapp/tsconfig.json
@@ -29,7 +29,13 @@
     "noImplicitAny": true,
     "noImplicitThis": true,
     "strictNullChecks": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "*": [
+        "*",
+        "src/*"
+      ]
+    }
   },
   "include": [
     "src",
