--- a/TestProjects/ChromelyStart/ChromelyReact/reactapp/package.json
+++ b/TestProjects/ChromelyStart/ChromelyReact/reactapp/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.1",
   "private": true,
   "scripts": {
-    "start": "parcel serve src/index.html --open -t browser",
+    "start": "parcel serve src/index.html --open -t browser --log-level 3 --port 1235",
     "build": "set NODE_ENV=development && parcel build src/index.html --no-minify",
     "watch": "parcel watch src/index.html -t browser",
     "build-prod": "parcel build src/index.html --no-minify",
@@ -16,13 +16,8 @@
   "dependencies": {
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
-    "@types/bent": "^7.0.2",
-    "@types/lodash": "^4.14.150",
-    "@types/parcel-env": "0.0.0",
-    "@types/react-router": "^5.1.7",
-    "@types/react-router-dom": "^5.1.5",
+    "@types/superagent": "^4.1.7",
     "add": "^2.0.6",
-    "bent": "^7.3.0",
     "date-fns": "^2.13.0",
     "lodash-core": "^4.17.15",
     "react": "^16.13.1",
@@ -31,6 +26,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
+    "superagent": "^5.2.2",
     "typeface-roboto": "0.0.75"
   },
   "eslintConfig": {
@@ -60,10 +56,15 @@
     "@testing-library/jest-dom": "^5.7.0",
     "@testing-library/react": "^10.0.4",
     "@testing-library/user-event": "^10.1.2",
+    "@types/bent": "^7.0.2",
     "@types/jest": "^25.2.1",
+    "@types/lodash": "^4.14.150",
     "@types/node": "^13.13.5",
+    "@types/parcel-env": "0.0.0",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
+    "@types/react-router": "^5.1.7",
+    "@types/react-router-dom": "^5.1.5",
     "@types/react-test-renderer": "^16.9.2",
     "babel-loader": "^8.1.0",
     "babel-plugin-require-context-hook": "^1.0.0",
