--- a/TestProjects/ChromelyStart/ChromelyControllers/ChromelyControllers.csproj
+++ b/TestProjects/ChromelyStart/ChromelyControllers/ChromelyControllers.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Chromely" Version="5.0.79" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.8" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
