--- a/TestProjects/ChromelyStart/ChromelyReact/reactapp/package.json
+++ b/TestProjects/ChromelyStart/ChromelyReact/reactapp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "parcel serve src/index.html --open -t browser --log-level 3 --port 1235",
+    "startAsp": "parcel serve src/indexAsp.html --open -t browser --log-level 3 --port 1235",
     "build": "set NODE_ENV=development && parcel build src/index.html --no-minify",
     "watch": "parcel watch src/index.html -t browser",
     "build-prod": "parcel build src/index.html --no-minify",
