--- a/TestProjects/NotionTests/NotionSidebar/package.json
+++ b/TestProjects/NotionTests/NotionSidebar/package.json
@@ -44,6 +44,8 @@
     "html-webpack-plugin": "^4.0.2",
     "prettier": "^2.0.2",
     "style-loader": "^1.1.3",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.5",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "3.2.1",
