--- a/TestProjects/NotionTests/NotionSidebar/src/manifest.json
+++ b/TestProjects/NotionTests/NotionSidebar/src/manifest.json
@@ -21,7 +21,8 @@
   "web_accessible_resources": [
     "content.styles.css",
     "icon-128.png",
-    "icon-34.png"
+    "icon-34.png",
+    "sidebar.html"
   ],
   "manifest_version": 2,
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
