--- a/TestProjects/NotionTests/NotionSidebar/.prettierrc
+++ b/TestProjects/NotionTests/NotionSidebar/.prettierrc
@@ -1,6 +1,8 @@
 {
-  "singleQuote": true,
-  "trailingComma": "es5",
-  "requirePragma": false,
-  "arrowParens": "always"
+   "singleQuote": true,
+   "trailingComma": "es5",
+   "requirePragma": false,
+   "arrowParens": "always",
+   "jsxBracketSameLine": true,
+   "tabWidth": 3
 }
