--- a/TestProjects/NotionTests/NotionSidebar/package.json
+++ b/TestProjects/NotionTests/NotionSidebar/package.json
@@ -9,12 +9,11 @@
    },
    "scripts": {
       "build": "node utils/build.js",
-      "start": "node utils/webserver.js",
+      "start": "set PORT=3026 && node utils/webserver.js",
       "prettier": "prettier --write '**/*.{js,jsx,css,html}'"
    },
    "dependencies": {
       "@hot-loader/react-dom": "^16.13.0",
-      "@types/chrome": "0.0.104",
       "@types/react": "^16.9.26",
       "@types/react-dom": "^16.9.8",
       "react": "^16.13.1",
@@ -26,6 +25,7 @@
       "@babel/plugin-proposal-class-properties": "^7.8.3",
       "@babel/preset-env": "^7.9.0",
       "@babel/preset-react": "^7.9.4",
+      "@types/chrome": "0.0.104",
       "@typescript-eslint/eslint-plugin": "^3.4.0",
       "@typescript-eslint/parser": "^3.4.0",
       "babel-eslint": "^10.1.0",
