--- a/TestProjects/NotionTests/NotionSidebar/jsconfig.json
+++ b/TestProjects/NotionTests/NotionSidebar/jsconfig.json
@@ -3,9 +3,7 @@
       "target": "es2018",
       "allowSyntheticDefaultImports": true,
       "baseUrl": "./",
-      "paths": {
-         "Sidebar/*": ["./src/pages/Sidebar/*"]
-      }
+      "paths": {}
    },
    "exclude": ["node_modules", "dist"]
 }
