--- a/TestProjects/NotionTests/NotionSidebar/package.json
+++ b/TestProjects/NotionTests/NotionSidebar/package.json
@@ -26,6 +26,7 @@
       "@babel/preset-env": "^7.9.0",
       "@babel/preset-react": "^7.9.4",
       "@types/chrome": "0.0.104",
+      "@types/webpack-env": "^1.15.2",
       "@typescript-eslint/eslint-plugin": "^3.4.0",
       "@typescript-eslint/parser": "^3.4.0",
       "babel-eslint": "^10.1.0",
@@ -50,9 +51,9 @@
       "style-loader": "^1.1.3",
       "ts-loader": "^7.0.5",
       "typescript": "^3.9.5",
-      "webpack": "^4.42.1",
-      "webpack-cli": "^3.3.11",
-      "webpack-dev-server": "3.2.1",
+      "webpack": "^4.43.0",
+      "webpack-cli": "^3.3.12",
+      "webpack-dev-server": "^3.2.1",
       "write-file-webpack-plugin": "^4.5.1"
    }
 }
