--- a/TestProjects/NotionTests/NotionSidebar/src/manifest.json
+++ b/TestProjects/NotionTests/NotionSidebar/src/manifest.json
@@ -15,15 +15,14 @@
    "content_scripts": [
       {
          "matches": ["http://*.notion.so/*", "https://*.notion.so/*"],
-         "js": ["contentScript.bundle.js"],
+         "js": ["content.bundle.js"],
          "css": ["content.styles.css"]
       }
    ],
    "web_accessible_resources": [
       "content.styles.css",
       "icon-128.png",
-      "icon-34.png",
-      "sidebar.html"
+      "icon-34.png"
    ],
    "manifest_version": 2,
    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
