--- a/TestProjects/NotionTests/NotionSidebar/package.json
+++ b/TestProjects/NotionTests/NotionSidebar/package.json
@@ -26,6 +26,7 @@
       "@babel/preset-env": "^7.9.0",
       "@babel/preset-react": "^7.9.4",
       "@types/chrome": "0.0.104",
+      "@types/html-minifier-terser": "^5.1.0",
       "@typescript-eslint/eslint-plugin": "^3.4.0",
       "@typescript-eslint/parser": "^3.4.0",
       "babel-eslint": "^10.1.0",
