--- a/TestProjects/NotionTests/NotionSidebar/package.json
+++ b/TestProjects/NotionTests/NotionSidebar/package.json
@@ -14,8 +14,12 @@
    },
    "dependencies": {
       "@hot-loader/react-dom": "^16.13.0",
+      "@material-ui/core": "^4.10.2",
+      "@material-ui/lab": "^4.0.0-alpha.56",
       "@types/react": "^16.9.26",
       "@types/react-dom": "^16.9.8",
+      "i": "^0.3.6",
+      "npm": "^6.14.5",
       "react": "^16.13.1",
       "react-dom": "^16.13.1",
       "react-hot-loader": "^4.12.20"
