update issue states yml

--- a/.github/issue-states.yml
+++ b/.github/issue-states.yml
@@ -3,6 +3,7 @@
 # Open issues that are moved to these project columns. Set to `[]` to disable
 openIssueColumns:
   - 🔥Next
+  - In Progress
 
 # Close issues that are moved to these project columns. Set to `[]` to disable
 closedIssueColumns:
