#13 access cookies in backed 1. found some great docs on how the chrome system works with backgorudn and conent. 2. figured out how to communicate. 3.  happy dev server works.  godo progresses

--- a/TestProjects/NotionTests/NotionSidebar/src/manifest.json
+++ b/TestProjects/NotionTests/NotionSidebar/src/manifest.json
@@ -11,7 +11,13 @@
    "icons": {
       "128": "icon-128.png"
    },
-   "permissions": ["activeTab", "tabs", "https://*.notion.so/*"],
+   "permissions": [
+      "activeTab",
+      "tabs",
+      "*://*.notion.so/*",
+      "https://notion.so/*",
+      "cookies"
+   ],
    "content_scripts": [
       {
          "matches": ["http://*.notion.so/*", "https://*.notion.so/*"],
