--- a/TestProjects/NotionTests/NotionSidebar/package.json
+++ b/TestProjects/NotionTests/NotionSidebar/package.json
@@ -18,6 +18,7 @@
       "@material-ui/lab": "^4.0.0-alpha.56",
       "@types/react": "^16.9.26",
       "@types/react-dom": "^16.9.8",
+      "chrome-extension-async": "^3.4.1",
       "i": "^0.3.6",
       "npm": "^6.14.5",
       "react": "^16.13.1",
