--- a/TestProjects/NotionTests/NotionSidebar/package.json
+++ b/TestProjects/NotionTests/NotionSidebar/package.json
@@ -16,23 +16,29 @@
       "@hot-loader/react-dom": "^16.13.0",
       "@material-ui/core": "^4.10.2",
       "@material-ui/lab": "^4.0.0-alpha.56",
+      "@reduxjs/toolkit": "^1.4.0",
       "@types/react": "^16.9.26",
       "@types/react-dom": "^16.9.8",
       "chrome-extension-async": "^3.4.1",
-      "i": "^0.3.6",
       "npm": "^6.14.5",
       "react": "^16.13.1",
       "react-dom": "^16.13.1",
-      "react-hot-loader": "^4.12.20"
+      "react-hot-loader": "^4.12.20",
+      "react-redux": "^7.2.0",
+      "redux": "^4.0.5",
+      "superagent": "^5.3.1"
    },
    "devDependencies": {
       "@babel/core": "^7.9.0",
       "@babel/plugin-proposal-class-properties": "^7.8.3",
       "@babel/preset-env": "^7.9.0",
       "@babel/preset-react": "^7.9.4",
+      "@testing-library/react": "^10.4.3",
       "@types/chrome": "0.0.104",
       "@types/html-minifier-terser": "^5.1.0",
+      "@types/react-redux": "^7.1.9",
       "@types/resize-observer-browser": "^0.1.3",
+      "@types/superagent": "^4.1.8",
       "@typescript-eslint/eslint-plugin": "^3.4.0",
       "@typescript-eslint/parser": "^3.4.0",
       "babel-eslint": "^10.1.0",
@@ -53,6 +59,7 @@
       "fs-extra": "^9.0.0",
       "html-loader": "0.5.5",
       "html-webpack-plugin": "^4.0.2",
+      "jest": "^26.1.0",
       "prettier": "^2.0.2",
       "style-loader": "^1.1.3",
       "ts-loader": "^7.0.5",
