--- a/TestProjects/NotionTests/NotionSidebar/jsconfig.json
+++ b/TestProjects/NotionTests/NotionSidebar/jsconfig.json
@@ -1,11 +1,12 @@
 {
    "compilerOptions": {
-      "target": "es2018",
-      "allowSyntheticDefaultImports": true,
-      "baseUrl": "./",
+      "target": "es2017",
+      "baseUrl": ".",
       "paths": {
-         "Sidebar/*": ["./src/pages/Sidebar/*"]
+         "Sidebar/*": ["src/pages/Sidebar/*"],
+         "Common/*": ["src/pages/Common/*"],
+         "Notion/*": ["src/Notion/*"]
       }
    },
-   "exclude": ["node_modules", "dist"]
+   "exclude": ["node_modules", "dist", "build"]
 }
