--- a/TestProjects/NotionTests/NotionSidebar/package.json
+++ b/TestProjects/NotionTests/NotionSidebar/package.json
@@ -62,6 +62,7 @@
       "file-loader": "^6.0.0",
       "fork-ts-checker-webpack-plugin": "^5.0.5",
       "fs-extra": "^9.0.0",
+      "hard-source-webpack-plugin": "^0.13.1",
       "html-loader": "0.5.5",
       "html-webpack-plugin": "^4.0.2",
       "jest": "^26.1.0",
