#13 code to fectch cookies and save user data. changed alias to avoid type script error of same name different case

--- a/TestProjects/NotionTests/NotionSidebar/tsconfig.json
+++ b/TestProjects/NotionTests/NotionSidebar/tsconfig.json
@@ -65,9 +65,9 @@
 
       "baseUrl": ".",
       "paths": {
-         "App/*": ["src/pages/App/*"],
-         "Common/*": ["src/pages/Common/*"],
-         "Notion/*": ["src/Notion/*"]
+         "aApp/*": ["src/pages/App/*"],
+         "aCommon/*": ["src/pages/Common/*"],
+         "aNotion/*": ["src/Notion/*"]
       }
    },
    "exclude": ["node_modules", "dist", "build"]
