--- a/TestProjects/NotionTests/NotionSidebar/src/manifest.json
+++ b/TestProjects/NotionTests/NotionSidebar/src/manifest.json
@@ -21,16 +21,10 @@
    "content_scripts": [
       {
          "matches": ["http://*.notion.so/*", "https://*.notion.so/*"],
-         "js": ["contentScript.bundle.js"],
-         "css": ["content.styles.css"]
+         "js": ["contentScript.bundle.js"]
       }
    ],
-   "web_accessible_resources": [
-      "content.styles.css",
-      "icon-128.png",
-      "icon-34.png",
-      "sidebar.html"
-   ],
+   "web_accessible_resources": ["icon-128.png", "icon-34.png", "sidebar.html"],
    "manifest_version": 2,
    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
