--- a/TestProjects/NotionTests/NotionSidebar/package.json
+++ b/TestProjects/NotionTests/NotionSidebar/package.json
@@ -35,6 +35,7 @@
    },
    "devDependencies": {
       "@babel/core": "^7.9.0",
+      "redux-devtools-extension": "^2.13.8",
       "@babel/plugin-proposal-class-properties": "^7.8.3",
       "@babel/preset-env": "^7.9.0",
       "@babel/preset-react": "^7.9.4",
