--- a/TestProjects/NotionTests/NotionSidebar/package.json
+++ b/TestProjects/NotionTests/NotionSidebar/package.json
@@ -35,7 +35,6 @@
    },
    "devDependencies": {
       "@babel/core": "^7.9.0",
-      "redux-devtools-extension": "^2.13.8",
       "@babel/plugin-proposal-class-properties": "^7.8.3",
       "@babel/preset-env": "^7.9.0",
       "@babel/preset-react": "^7.9.4",
@@ -66,8 +65,11 @@
       "hard-source-webpack-plugin": "^0.13.1",
       "html-loader": "0.5.5",
       "html-webpack-plugin": "^4.0.2",
+      "husky": "^4.2.5",
       "jest": "^26.1.0",
-      "prettier": "^2.0.2",
+      "prettier": "^2.0.5",
+      "pretty-quick": "^2.0.1",
+      "redux-devtools-extension": "^2.13.8",
       "style-loader": "^1.1.3",
       "ts-loader": "^7.0.5",
       "typescript": "^3.9.5",
@@ -75,5 +77,10 @@
       "webpack-cli": "^3.3.11",
       "webpack-dev-server": "3.2.1",
       "write-file-webpack-plugin": "^4.5.1"
+   },
+   "husky": {
+      "hooks": {
+         "pre-commit": "pretty-quick --staged --verbose"
+      }
    }
 }
