--- a/TestProjects/NotionTests/NotionSidebar/tsconfig.json
+++ b/TestProjects/NotionTests/NotionSidebar/tsconfig.json
@@ -36,7 +36,7 @@
       "noUnusedLocals": false /* Report errors on unused locals. */,
       "noUnusedParameters": false /* Report errors on unused parameters. */,
       "noImplicitReturns": true /* Report error when not all code paths in function return a value. */,
-      // "noFallthroughCasesInSwitch": true,    /* Report errors for fallthrough cases in switch statement. */
+      "noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
 
       /* Module Resolution Options */
       "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
@@ -58,7 +58,7 @@
 
       /* Experimental Options */
       "experimentalDecorators": true /* Enables experimental support for ES7 decorators. */,
-      // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
+      "emitDecoratorMetadata": true /* Enables experimental support for emitting type metadata for decorators. */,
 
       /* Advanced Options */
       "forceConsistentCasingInFileNames": false /* Disallow inconsistently-cased references to the same file. */,
