--- a/TestProjects/NotionTests/NotionSidebar/package.json
+++ b/TestProjects/NotionTests/NotionSidebar/package.json
@@ -20,6 +20,7 @@
       "@types/react": "^16.9.26",
       "@types/react-dom": "^16.9.8",
       "@types/redux-logger": "^3.0.8",
+      "@types/remote-redux-devtools": "^0.5.4",
       "chrome-extension-async": "^3.4.1",
       "normalizr": "^3.6.0",
       "npm": "^6.14.5",
@@ -71,6 +72,7 @@
       "prettier": "^2.0.5",
       "pretty-quick": "^2.0.1",
       "redux-devtools-extension": "^2.13.8",
+      "remote-redux-devtools": "^0.5.16",
       "style-loader": "^1.1.3",
       "ts-loader": "^7.0.5",
       "typescript": "^3.9.5",
