#17 loaded fonts, added error boundary

--- a/TestProjects/NotionTests/NotionSidebar/package.json
+++ b/TestProjects/NotionTests/NotionSidebar/package.json
@@ -15,6 +15,7 @@
    "dependencies": {
       "@hot-loader/react-dom": "^16.13.0",
       "@material-ui/core": "^4.10.2",
+      "@material-ui/icons": "^4.9.1",
       "@material-ui/lab": "^4.0.0-alpha.56",
       "@reduxjs/toolkit": "^1.4.0",
       "@types/react": "^16.9.26",
@@ -22,12 +23,14 @@
       "@types/redux-logger": "^3.0.8",
       "@types/remote-redux-devtools": "^0.5.4",
       "chrome-extension-async": "^3.4.1",
+      "fontsource-roboto": "^2.1.4",
       "normalizr": "^3.6.0",
       "npm": "^6.14.5",
       "query-string": "^6.13.1",
       "re-reselect": "^4.0.0",
       "react": "^16.13.1",
       "react-dom": "^16.13.1",
+      "react-error-boundary": "^2.2.3",
       "react-hot-loader": "^4.12.20",
       "react-redux": "^7.2.0",
       "redux": "^4.0.5",
@@ -53,7 +56,7 @@
       "babel-preset-react-app": "^9.1.2",
       "clean-webpack-plugin": "^3.0.0",
       "copy-webpack-plugin": "^5.1.1",
-      "css-loader": "^3.4.2",
+      "css-loader": "^3.6.0",
       "eslint": "^6.8.0",
       "eslint-config-react-app": "^5.2.1",
       "eslint-plugin-flowtype": "^4.7.0",
@@ -76,6 +79,7 @@
       "style-loader": "^1.1.3",
       "ts-loader": "^7.0.5",
       "typescript": "^3.9.5",
+      "url-loader": "^4.1.0",
       "webpack": "^4.42.1",
       "webpack-cli": "^3.3.11",
       "webpack-dev-server": "3.2.1",
