--- a/TestProjects/NotionTests/NotionSidebar/package.json
+++ b/TestProjects/NotionTests/NotionSidebar/package.json
@@ -74,6 +74,7 @@
       "jest": "^26.1.0",
       "prettier": "^2.0.5",
       "pretty-quick": "^2.0.1",
+      "react-dev-tools-iframe-webpack-plugin": "^1.0.2",
       "redux-devtools-extension": "^2.13.8",
       "remote-redux-devtools": "^0.5.16",
       "style-loader": "^1.1.3",
