#24 page load api cancellation.  added loading skeleton.  better transitions

--- a/TestProjects/NotionTests/NotionSidebar/tsconfig.json
+++ b/TestProjects/NotionTests/NotionSidebar/tsconfig.json
@@ -70,7 +70,8 @@
       "paths": {
          "aApp/*": ["src/pages/app/*"],
          "aCommon/*": ["src/pages/common/*"],
-         "aNotion/*": ["src/notion/*"]
+         "aNotion/*": ["src/notion/*"],
+         "aUtilities/*": ["src/utilities/*"]
       }
    },
    "exclude": ["node_modules", "dist", "build"]
