--- a/TestProjects/NotionTests/NotionSidebar/package.json
+++ b/TestProjects/NotionTests/NotionSidebar/package.json
@@ -14,7 +14,7 @@
    },
    "dependencies": {
       "@hot-loader/react-dom": "^16.13.0",
-      "@material-ui/core": "^4.10.2",
+      "@material-ui/core": "^4.11.0",
       "@material-ui/icons": "^4.9.1",
       "@material-ui/lab": "^4.0.0-alpha.56",
       "@reduxjs/toolkit": "^1.4.0",
@@ -36,7 +36,8 @@
       "redux": "^4.0.5",
       "redux-logger": "^3.0.6",
       "reselect": "^4.0.0",
-      "superagent": "^5.3.1"
+      "superagent": "^5.3.1",
+      "tree-model": "^1.0.7"
    },
    "devDependencies": {
       "@babel/core": "^7.9.0",
