--- a/TestProjects/NotionTests/NotionSidebar/package.json
+++ b/TestProjects/NotionTests/NotionSidebar/package.json
@@ -9,7 +9,7 @@
    },
    "scripts": {
       "build": "node utils/build.js",
-      "start": "set PORT=3000 && node utils/webserver.js --max-old-space-size 3096",
+      "start": "set PORT=3000 & node utils/webserver.js --max-old-space-size 3096",
       "prettier": "prettier --write '**/*.{js,jsx,css,html}'"
    },
    "dependencies": {
@@ -22,7 +22,9 @@
       "@types/react-dom": "^16.9.8",
       "@types/redux-logger": "^3.0.8",
       "@types/remote-redux-devtools": "^0.5.4",
+      "cache-service-cache-module": "^2.0.1",
       "chrome-extension-async": "^3.4.1",
+      "debug": "^4.1.1",
       "fontsource-roboto": "^2.1.4",
       "normalizr": "^3.6.0",
       "npm": "^6.14.5",
@@ -37,6 +39,7 @@
       "redux-logger": "^3.0.6",
       "reselect": "^4.0.0",
       "superagent": "^5.3.1",
+      "superagent-cache-plugin": "^3.0.0-beta.1",
       "tree-model": "^1.0.7"
    },
    "devDependencies": {
@@ -46,6 +49,7 @@
       "@babel/preset-react": "^7.9.4",
       "@testing-library/react": "^10.4.3",
       "@types/chrome": "0.0.104",
+      "@types/debug": "^4.1.5",
       "@types/html-minifier-terser": "^5.1.0",
       "@types/react-redux": "^7.1.9",
       "@types/resize-observer-browser": "^0.1.3",
