--- a/TestProjects/NotionTests/NotionSidebar/package.json
+++ b/TestProjects/NotionTests/NotionSidebar/package.json
@@ -21,7 +21,6 @@
       "@types/react": "^16.9.26",
       "@types/react-dom": "^16.9.8",
       "@types/redux-logger": "^3.0.8",
-      "@types/remote-redux-devtools": "^0.5.4",
       "cache-service-cache-module": "^2.0.1",
       "chrome-extension-async": "^3.4.1",
       "debug": "^4.1.1",
@@ -34,6 +33,7 @@
       "react-dom": "^16.13.1",
       "react-error-boundary": "^2.2.3",
       "react-hot-loader": "^4.12.20",
+      "react-html-parser": "^2.0.2",
       "react-redux": "^7.2.0",
       "redux": "^4.0.5",
       "redux-logger": "^3.0.6",
@@ -45,12 +45,14 @@
    "devDependencies": {
       "@babel/core": "^7.9.0",
       "@babel/plugin-proposal-class-properties": "^7.8.3",
+      "@types/remote-redux-devtools": "^0.5.4",
       "@babel/preset-env": "^7.9.0",
       "@babel/preset-react": "^7.9.4",
       "@testing-library/react": "^10.4.3",
       "@types/chrome": "0.0.104",
       "@types/debug": "^4.1.5",
       "@types/html-minifier-terser": "^5.1.0",
+      "@types/react-html-parser": "^2.0.1",
       "@types/react-redux": "^7.1.9",
       "@types/resize-observer-browser": "^0.1.3",
       "@types/superagent": "^4.1.8",
