--- a/TestProjects/NotionTests/NotionSidebar/package.json
+++ b/TestProjects/NotionTests/NotionSidebar/package.json
@@ -10,6 +10,7 @@
    "scripts": {
       "build": "node utils/build.js",
       "start": "set PORT=3000 & node utils/webserver.js --max-old-space-size 3096",
+      "remotedev": "remotedev --hostname=localhost --port=8000",
       "prettier": "prettier --write '**/*.{js,jsx,css,html}'"
    },
    "dependencies": {
@@ -45,7 +46,6 @@
    "devDependencies": {
       "@babel/core": "^7.9.0",
       "@babel/plugin-proposal-class-properties": "^7.8.3",
-      "@types/remote-redux-devtools": "^0.5.4",
       "@babel/preset-env": "^7.9.0",
       "@babel/preset-react": "^7.9.4",
       "@testing-library/react": "^10.4.3",
@@ -54,6 +54,7 @@
       "@types/html-minifier-terser": "^5.1.0",
       "@types/react-html-parser": "^2.0.1",
       "@types/react-redux": "^7.1.9",
+      "@types/remote-redux-devtools": "^0.5.4",
       "@types/resize-observer-browser": "^0.1.3",
       "@types/superagent": "^4.1.8",
       "@typescript-eslint/eslint-plugin": "^3.4.0",
@@ -84,6 +85,7 @@
       "react-dev-tools-iframe-webpack-plugin": "^1.0.2",
       "redux-devtools-extension": "^2.13.8",
       "remote-redux-devtools": "^0.5.16",
+      "remotedev-server": "^0.3.1",
       "style-loader": "^1.1.3",
       "ts-loader": "^7.0.5",
       "typescript": "^3.9.5",
