--- a/NotionSidecar/.babelrc
+++ b/NotionSidecar/.babelrc
@@ -1,11 +1,15 @@
 {
-  "presets": [
-    // "@babel/preset-env",
-    // "@babel/preset-react"
-    "react-app"
-  ],
-  "plugins": [
-    // "@babel/plugin-proposal-class-properties",
-    "react-hot-loader/babel"
-  ]
+   "presets": [
+      // "@babel/preset-env",
+      // "@babel/preset-react"
+      "react-app",
+      [
+         "@babel/preset-env",
+         { "targets": { "browsers": "last 8 Chrome versions" } } // or whatever your project requires
+      ]
+   ],
+   "plugins": [
+      // "@babel/plugin-proposal-class-properties",
+      "react-hot-loader/babel"
+   ]
 }
