--- a/NotionSidecar/package.json
+++ b/NotionSidecar/package.json
@@ -48,6 +48,7 @@
       "@babel/plugin-proposal-class-properties": "^7.10.4",
       "@babel/preset-env": "^7.10.4",
       "@babel/preset-react": "^7.10.4",
+      "@pmmmwh/react-refresh-webpack-plugin": "^0.4.1",
       "@testing-library/react": "^10.4.7",
       "@types/chrome": "0.0.104",
       "@types/debug": "^4.1.5",
@@ -83,6 +84,7 @@
       "prettier": "^2.0.5",
       "pretty-quick": "^2.0.1",
       "react-dev-tools-iframe-webpack-plugin": "^1.0.2",
+      "react-refresh": "^0.8.3",
       "redux-devtools-extension": "^2.13.8",
       "remote-redux-devtools": "^0.5.16",
       "remotedev-server": "^0.3.1",
