#43 copy global embed block.  can't use navigation clipobard due to iframe permissions.  added light tooltip

--- a/NotionSidecar/src/manifest.json
+++ b/NotionSidecar/src/manifest.json
@@ -17,7 +17,8 @@
       "*://*.notion.so/*",
       "https://notion.so/*",
       "cookies",
-      "webRequest"
+      "webRequest",
+      "clipboardWrite"
    ],
    "content_scripts": [
       {
