--- a/NotionSidecar/package.json
+++ b/NotionSidecar/package.json
@@ -17,6 +17,7 @@
       "@material-ui/core": "^4.11.0",
       "@material-ui/icons": "^4.9.1",
       "@material-ui/lab": "^4.0.0-alpha.56",
+      "@react-hook/window-size": "^3.0.7",
       "@reduxjs/toolkit": "^1.4.0",
       "@types/react": "^16.9.43",
       "@types/react-dom": "^16.9.8",
@@ -31,6 +32,7 @@
       "re-reselect": "^4.0.0",
       "react": "^16.13.1",
       "react-dom": "^16.13.1",
+      "react-draggable": "^4.4.3",
       "react-error-boundary": "^2.3.1",
       "react-html-parser": "^2.0.2",
       "react-redux": "^7.2.1",
