--- a/NotionSidecar/src/manifest.json
+++ b/NotionSidecar/src/manifest.json
@@ -1,12 +1,12 @@
 {
-   "name": "Notion Sidebar",
+   "name": "Evergreen Notes (for Notion)",
    "options_page": "options.html",
    "background": {
       "page": "background.html"
    },
    "browser_action": {
-      "default_title": "Notion Sidebar",
-      "default_icon": "icon-34.png"
+      "default_title": "Evergreen Notes (for Notion)",
+      "default_icon": "icon-128.png"
    },
    "icons": {
       "128": "icon-128.png"
