--- a/EvergreenNotes/package.json
+++ b/EvergreenNotes/package.json
@@ -1,11 +1,10 @@
 {
-   "name": "chrome-extension-boilerplate-react",
-   "version": "2.5.0",
-   "description": "A chrome extension boilerplate built with React 16 and Webpack 4",
+   "name": "evergreen-notes",
+   "version": "0.9.0",
+   "description": "Evergreen Notes for notion",
    "license": "MIT",
    "repository": {
-      "type": "git",
-      "url": "https://github.com/lxieyang/chrome-extension-boilerplate-react.git"
+      "type": "git"
    },
    "scripts": {
       "build": "node utils/build.js",
