--- a/EvergreenNotes/src/manifest.json
+++ b/EvergreenNotes/src/manifest.json
@@ -1,5 +1,6 @@
 {
    "name": "Evergreen Notes (for Notion)",
+   "version": "1.0.0",
    "options_page": "options.html",
    "background": {
       "page": "background.html"
