#65 changed how spaceid is obtained and saved to fix the cookie changes in notion. streamlined release process

--- a/EvergreenNotes/package.json
+++ b/EvergreenNotes/package.json
@@ -7,7 +7,7 @@
       "type": "git"
    },
    "scripts": {
-      "build": "node utils/build.js",
+      "release": "node utils/build.js",
       "start": "set PORT=3000 & node utils/webserver.js --max-old-space-size 3096",
       "remotedev": "remotedev --hostname=localhost --port=8000",
       "prettier": "prettier --write '**/*.{js,jsx,css,html}'"
