#74 refresh button.  bug fixes for color and removed old cookie references

--- a/EvergreenNotes/.vscode/settings.json
+++ b/EvergreenNotes/.vscode/settings.json
@@ -1,4 +1,23 @@
 {
    "editor.formatOnSave": true,
-   "autoHide.autoHidePanel": false
+   "autoHide.autoHidePanel": false,
+   "files.exclude": {
+      "**/.git": true,
+      "**/.svn": true,
+      "**/.hg": true,
+      "**/CVS": true,
+      "**/.DS_Store": true,
+      "**/.cache": true,
+      "**/.vs/": true,
+      "**/*.cs": true,
+      "**/*.orig": true,
+      "**/bin/": true,
+      "**/build/": true,
+      "**/debug/": true,
+      "**/dist/": true,
+      "**/node_modules/": true,
+      "**/obj": true,
+      "release": true
+   },
+   "explorerExclude.backup": null
 }
