ts fork use.  also reverted some changes

--- a/EvergreenNotes/tsconfig.json
+++ b/EvergreenNotes/tsconfig.json
@@ -66,6 +66,8 @@
 
       /* Advanced Options */
       "forceConsistentCasingInFileNames": false /* Disallow inconsistently-cased references to the same file. */,
+      "importsNotUsedAsValues": "preserve",
+      "skipDefaultLibCheck": true,
 
       "baseUrl": ".",
       "paths": {
