--- a/EvergreenNotes/package.json
+++ b/EvergreenNotes/package.json
@@ -65,6 +65,7 @@
       "babel-eslint": "^10.1.0",
       "babel-loader": "^8.1.0",
       "babel-preset-react-app": "^9.1.2",
+      "cache-loader": "^4.1.0",
       "clean-webpack-plugin": "^3.0.0",
       "copy-webpack-plugin": "^5.1.1",
       "css-loader": "^3.6.0",
