#76 added Options pane

--- a/EvergreenNotes/src/manifest.json
+++ b/EvergreenNotes/src/manifest.json
@@ -19,7 +19,8 @@
       "https://notion.so/*",
       "cookies",
       "webRequest",
-      "clipboardWrite"
+      "clipboardWrite",
+      "storage"
    ],
    "content_scripts": [
       {
