--- a/EvergreenNotes/package.json
+++ b/EvergreenNotes/package.json
@@ -26,6 +26,7 @@
       "chrome-extension-async": "^3.4.1",
       "debug": "^4.1.1",
       "fontsource-roboto": "^3.0.3",
+      "luxon": "^1.25.0",
       "material-ui-popup-state": "^1.6.1",
       "normalizr": "^3.6.0",
       "notistack": "^1.0.0",
@@ -55,6 +56,7 @@
       "@types/chrome": "0.0.123",
       "@types/debug": "^4.1.5",
       "@types/html-minifier-terser": "^5.1.0",
+      "@types/luxon": "^1.24.4",
       "@types/react-html-parser": "^2.0.1",
       "@types/react-redux": "^7.1.9",
       "@types/remote-redux-devtools": "^0.5.4",
