#79 #80 performance improvements.  Added mentions to references

--- a/EvergreenNotes/tsconfig.json
+++ b/EvergreenNotes/tsconfig.json
@@ -68,6 +68,7 @@
       "forceConsistentCasingInFileNames": false /* Disallow inconsistently-cased references to the same file. */,
       "importsNotUsedAsValues": "preserve",
       "skipDefaultLibCheck": true,
+      "resolveJsonModule": true,
 
       "baseUrl": ".",
       "paths": {
