#95 #94 changed blockUi to call TextUIGroup which is composed of text ui and children

--- a/EvergreenNotes/.vscode/settings.json
+++ b/EvergreenNotes/.vscode/settings.json
@@ -19,5 +19,8 @@
       "**/obj": true,
       "release": true
    },
-   "explorerExclude.backup": null
+   "explorerExclude.backup": null,
+   "editor.codeActionsOnSave": {
+      "source.fixAll.eslint": true
+   }
 }
