--- a/EvergreenNotes/package.json
+++ b/EvergreenNotes/package.json
@@ -13,7 +13,7 @@
       "prettier": "prettier --write '**/*.{js,jsx,css,html}'"
    },
    "dependencies": {
-      "@babel/runtime": "^7.12.1",
+      "@babel/runtime": "^7.12.5",
       "@material-ui/core": "^4.11.0",
       "@material-ui/icons": "^4.9.1",
       "@material-ui/lab": "^4.0.0-alpha.56",
@@ -68,10 +68,10 @@
       "babel-preset-react-app": "^10.0.0",
       "clean-webpack-plugin": "^3.0.0",
       "copy-webpack-plugin": "^5.1.1",
+      "cross-env": "^7.0.2",
       "css-loader": "^3.6.0",
       "eslint": "^7.12.1",
       "eslint-config-react-app": "^6.0.0",
-      "eslint-plugin-flowtype": "^5.2.0",
       "eslint-plugin-import": "^2.22.1",
       "eslint-plugin-jsx-a11y": "^6.4.1",
       "eslint-plugin-react": "^7.21.5",
